# ccf_mapper

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.prev.result.store/01_test/: AM-01.json  AM-02.json  AM-03.json  AM-04.json  AM-05.json
.prev.result.store/02_test/: AM-01.json  AM-02.json  AM-03.json  AM-04.json  AM-05.json  AM-06.json  AM-07.json  AM-08.json  AM-09.json  AM-10.json  AM-11.json  AM-12.json  AM-13.json  BC-01.json  BC-02.json  BC-03.json  BC-04.json  BC-05.json  BC-06.json  BM-01.json  BM-02.json
.prev.result.store/03_test/: AM-01.json  AM-02.json  AM-03.json  AM-04.json
.prev.result.store/04_test/: AM-01.json  AM-02.json  AM-03.json
.prev.result.store/05_test/: AM-01.json  AM-02.json  AM-03.json  AM-04.json  AM-05.json  AM-06.json
.prev.result.store/06_test/: AM-01.json  AM-02.json  AM-03.json  AM-04.json  AM-05.json  AM-06.json  AM-07.json  AM-08.json  AM-09.json  AM-10.json  AM-11.json  AM-12.json  AM-13.json  BC-01.json  BC-02.json  BC-03.json  BC-04.json  BC-05.json  BC-06.json  BM-01.json  BM-02.json  BM-03.json  BM-04.json  BM-05.json  CFM-01.json
.prev.result.store/07_test/: AM-01.json  AM-03.json  AM-07.json  AM-09.json  AM-12.json  BC-05.json  BM-01.json  BM-02.json  BM-04.json  CFM-03.json  CFM-07.json  CFM-08.json  CFM-14.json  CHM-04.json  CMS-02.json  CMS-04.json  CRY-02.json  CRY-04.json  CRY-06.json  CRY-07.json  CRY-12.json  CRY-13.json  CRY-14.json  CRY-15.json  DM-02.json  DM-03.json  DM-08.json  (+38 more)
data/: README.md
examples/: cis_pi_extracted_controls.json
src/: __init__.py  pipeline.py
(+192 files in other folders)
